<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:text="@string/card_create"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/edit_front"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/card_front"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/card_back"
        android:inputType="textPersonName" />
</LinearLayout>