<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:text="@string/edit_card"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/edit_deck_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/deck_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_deck_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/deck_desc"
        android:inputType="textPersonName" />
</LinearLayout>