<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitebackground"
    android:orientation="vertical"
    tools:context="com.example.android.flashcards.MenuActivity">

    <LinearLayout
        android:id="@+id/singleplayerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clipChildren="false"
        android:divider="@android:color/transparent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@color/whitebackground"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/play" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-40dp"
            android:layout_weight=".2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1.5"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:text="@string/menu_singleplayer"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingLeft="20dp"
                android:text="@string/menu_singleplayerdesc"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/decklayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clipChildren="false"
        android:divider="@android:color/transparent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:background="@color/whitebackground"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/deck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-40dp"
            android:layout_weight=".2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1.5"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:text="@string/menu_deckedit"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingLeft="20dp"
                android:text="@string/menu_deckeditdesc"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profilelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clipChildren="false"
        android:divider="@android:color/transparent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@color/whitebackground"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-40dp"
            android:layout_weight=".2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1.5"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:text="@string/menu_profile"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingLeft="20dp"
                android:text="@string/menu_profiledesc"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/communitylayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clipChildren="false"
        android:divider="@android:color/transparent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@color/whitebackground"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/download" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-40dp"
            android:layout_weight=".2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1.5"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:text="@string/menu_community"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingLeft="20dp"
                android:text="@string/menu_communitydesc"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logoutlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clipChildren="false"
        android:divider="@android:color/transparent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@color/whitebackground"
            android:divider="@android:color/transparent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-40dp"
            android:layout_weight=".2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1.5"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:text="@string/menu_logout"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingLeft="20dp"
                android:text="@string/menu_logoutdesc"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
