<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitebackground">

    <ImageView
        android:id="@+id/profile_picture_image_view"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onProfilePictureClicked" />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/profile_username"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textcolor"
        android:textSize="42sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/games_played_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/profile_games_played"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/games_won_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/profile_games_won"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/games_played"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/games_won"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num_decks_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/profile_deck_amount"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/num_cards_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/profile_card_amount"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deck_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:onClick="onMenuClicked"
        android:text="Menu"
        android:textColor="@android:color/white" />

</RelativeLayout>
