<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.flashcards.LoginActivity"
    android:focusableInTouchMode="true"
    style="@style/AppTheme"
    android:background="@color/whitebackground"
    android:focusable="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loginLayout"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Flash Cards"
            android:textColor="@color/textcolor"
            android:textSize="64sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="An app that keeps you guessing"
            android:textColor="@color/textcolor"
            android:textSize="24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:text=""
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="96dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="161dp" />

        <Button
            android:id="@+id/login"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:onClick="attemptLogin"
            android:text="@string/action_sign_in"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="218dp" />

        <Button
            android:id="@+id/register"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="2dp"
            android:onClick="RegisterUserView"
            android:text="@string/action_register"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="256dp" />

        <Button
            android:id="@+id/loginoffline"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="2dp"
            android:onClick="RegisterUserView"
            android:text="@string/action_login_offline"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="256dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="161dp" />

        <EditText
            android:id="@+id/displayname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/action_displayname"
            android:inputType="text"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="161dp" />

        <EditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:text=""
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="96dp" />

        <Button
            android:id="@+id/createaccount"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:onClick="RegisterUser"
            android:text="@string/action_create_new_account"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="256dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="170dp"
        android:layout_height="111dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLayout"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/offlineTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Login to access online featues!"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>