<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deck_create_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whitebackground"
    tools:context="com.example.android.flashcards.DecksActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_weight="7">

        <TextView
            android:id="@+id/selectDeckTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="bottom"
            android:paddingTop="3dp"
            android:text="@string/deck_deck_select"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/plusbutt"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/newdeckborder"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onNewDeck"
            android:text="+"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/create_deck_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/plusbutt"
            android:paddingTop="5dp"
            android:layout_toRightOf="@+id/plusbutt">

            <TextView
                android:id="@+id/newdecktxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="bottom"
                android:text="@string/deck_deck_create"
                android:textColor="@color/textcolor"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/newdecktxt"
                android:gravity="start"
                android:text="@string/deck_deck_desc"
                android:textAlignment="viewStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
        </RelativeLayout>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/decksListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>
